--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+server.port = 8081
+
+spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/online-store?serverTimezone=UTC
 spring.datasource.username = root
 spring.datasource.password = password
+
+spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto = update
 
