--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.admin.username = admin
 spring.admin.password = admin
 
 spring.queries.user-query = select username, password, active from user where username = ?
-spring.queries.role-query = elect u.username, r.role from user u inner join user_role ur on(u.user_id = ur.user_id) inner join role r on(ur.role_id = r.role_id) where u.username = ?
+spring.queries.role-query = select u.username, r.role from user u inner join user_role ur on(u.user_id = ur.user_id) inner join role r on(ur.role_id = r.role_id) where u.username = ?
