--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.jpa.hibernate.ddl-auto = update
 spring.thymeleaf.cache = false
 spring.thymeleaf.prefix = classpath:/templates
 
-spring.admin.username = admin
-spring.admin.password = admin
+admin.username = admin
+admin.password = admin
 
-spring.queries.user-query = select username, password, activity from users where username = ?
-spring.queries.role-query = select u.username, r.role_name from users u inner join user_roles ur on(u.user_id = ur.user_id) inner join roles r on(ur.role_id = r.role_id) where u.username = ?
+spring.queries.user-query = select username, password, activity from user where username = ?
+spring.queries.role-query = select u.username, r.role_name from user u inner join user_role ur on(u.user_id = ur.user_id) inner join role r on(ur.role_id = r.role_id) where u.username = ?
