--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <artifactId>online-store</artifactId>
     <version>1.0.0</version>
     <name>online-store</name>
-    <description>Implementation of online shopping cart application with authentication system.</description>
+    <description>Implementation of the online store with the shopping cart and an authentication system.</description>
 
     <properties>
         <java.version>1.8</java.version>
