--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <description>Implementation of the online store with the shopping cart and an authentication system.</description>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
@@ -60,6 +60,13 @@
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
             <version>8.0.16</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
